# bzspline

./: CMakeLists.txt  README.md  bzspline_libConfig.cmake
bzspline_lib/: CMakeLists.txt
bzspline_lib/include/basis/: data_type.h  data_utils.h
bzspline_lib/include/de_boor/: de_boor.h
bzspline_lib/include/spline/: spline_interface.h
include/spline/: b_spline.h  bezier_spline.h  spline_interface.h
tests/: CMakeLists.txt  b_spline_test.cpp  bezier_spline_test.cpp  data_utils_test.cpp  de_boor_test.cpp
